[tool.poetry]
name = "rpg-helper"
version = "0.1.0"
description = ""
authors = ["JulienGL <jgl94@free.fr>"]
readme = "README.md"
packages = [{include = "rpg_helper"}]

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^12.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
